Version 1.3 - 2015-01-22
* Allow to import / export attachments on contract
* module creation