@@ -10,9 +10,8 @@ def register():
         DocumentRule,
         ReportTemplate,
         RuleDocumentDescriptionRelation,
-        Offered,
-        OfferedProduct,
-        OfferedOptionDescription,
+        Product,
+        OptionDescription,
         Contract,
         DocumentRequestLine,
         DocumentRequest,
