@@ -4,19 +4,11 @@
         <!-- ################# -->
         <!-- # Document Rule # -->
         <!-- ################# -->
-        <record model="ir.ui.view" id="document_rule_form">
+        <record model="ir.ui.view" id="documents_rule_form">
             <field name="model">document.rule</field>
             <field name="type">form</field>
-            <field name="inherit" ref="offered_insurance.businessruleroot_view_form"/>
             <field name="name">document_rule_form</field>
         </record>
-        <record model="ir.ui.view" id="document_rule_tree">
-            <field name="model">document.rule</field>
-            <field name="type">tree</field>
-            <field name="inherit" ref="offered_insurance.businessruleroot_view_tree"/>
-            <field name="arch" type="xml"/>
-        </record>
-
         <record model="ir.ui.view" id="product_view_form">
             <field name="model">offered.product</field>
             <field name="type">form</field>
