@@ -3,8 +3,10 @@ depends:
     ir
     res
     cog_utils
+    rule_engine
     document_request
     offered_insurance
-    contract
+    contract_insurance
 xml:
     offered.xml
+    contract.xml
