@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<data>
+    <xpath expr="/form/notebook/page[@id='contacts']" position="before">
+        <page string="Documents" id="documents">
+            <field name="document_request_lines" colspan="4"/>
+        </page>
+    </xpath>
+</data>
